--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,20 +2,21 @@
 @use "global" as *;
 
 html {
+
   //~375px
   @media (max-width: 375px) {
-    font-size: vw(375, 16);
+    font-size: calc(16 / 375 * 100vw);
   }
 
   //375px~787px
   font-size: 16px;
 
   @include mq("md") {
-    font-size: vw(strip-unit($inner), 16);
+    font-size: calc(16 / var(--inner) * 100vw);
   }
 
   //inner~max-screen
-  @media (min-width: $inner) {
+  @media (min-width: var(--inner)) {
     font-size: 16px;
   }
 }
@@ -32,6 +33,7 @@ a {
   text-decoration: none;
   color: inherit;
   transition: opacity 0.3s;
+
   @include mq("md") {
     &:hover {
       opacity: 0.8;
