--- a/src/sass/global/_breakpoints.scss
+++ b/src/sass/global/_breakpoints.scss
@@ -49,7 +49,7 @@ $mediaquerys: (
 
 @if $startFrom == sp {
   //pcで表示
-  .u-desktop {
+  .pc {
     display: none;
     @include mq("md") {
       display: block;
@@ -57,14 +57,14 @@ $mediaquerys: (
   }
 
   //モバイルのみ表示
-  .u-mobile {
+  .sp {
     @include mq("md") {
       display: none;
     }
   }
 } @else {
   //pcで表示
-  .u-desktop {
+  .pc {
     display: block;
     @include mq("md") {
       display: none;
@@ -72,7 +72,7 @@ $mediaquerys: (
   }
 
   //モバイルのみ表示
-  .u-mobile {
+  .sp {
     display: none;
     @include mq("md") {
       display: block;
