--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -27,6 +27,8 @@ $padding-sp: 20px;
   --black: #000;
   --white: #fff;
   --dark-gray: #333;
+  --red: #FF0000;
+  --blue: #3358D3;
   --purple: #411B99;
   --green: #0CA896;
   --gray: #C9C9C9;
