--- a/src/sass/module/_bg-wrapper.scss
+++ b/src/sass/module/_bg-wrapper.scss
@@ -11,6 +11,6 @@
   background-image: url(../images/bg-main.webp);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: 100% 100%;
   z-index: -1;
 }
