--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -55,6 +55,7 @@
 }
 
 .header__logo-icon {
+  display: block;
   width: rem(38);
 
   @include mq("md") {
@@ -73,6 +74,7 @@
 }
 
 .header__logo-company {
+  display: block;
   width: rem(154);
 
   @include mq("md") {
@@ -221,7 +223,8 @@
 }
 
 .header__drawer-wrapper {
-  padding-block: rem(120) clamp(rem(100), 190/931*100vh, rem(190));
+  // padding-block: rem(120) clamp(rem(100), 190/931*100vh, rem(190));
+  padding-block: rem(40) rem(60);
 }
 
 .header__drawer-inner.inner {}
