--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -32,6 +32,7 @@
 }
 
 .mv__catch {
+  display: block;
   position: absolute;
   top: 51%;
   transform: translateY(-50%);
@@ -50,6 +51,7 @@
 
 .mv__img {
   --_border-radius: calc(100/16*1rem);
+  display: block;
   height: inherit;
   min-height: inherit;
   border-top-left-radius: var(--_border-radius);
@@ -97,8 +99,9 @@
   color: var(--green);
   line-height: calc(15/13);
   text-transform: uppercase;
-  writing-mode: sideways-lr;
+  writing-mode: vertical-rl;
   letter-spacing: 0.05em;
+  transform: rotate(180deg);
 
   @include mq("md") {
     letter-spacing: 0.05em;
@@ -121,7 +124,7 @@
   background-color: var(--green);
   grid-row: 1;
   grid-column: 1;
-  clip-path: inset(0 0 100% 0);
+  clip-path: inset(100% 0 0 0);
   animation: 2.5s scroll ease-out infinite;
 }
 
